# thunderbird-mcp

./: .gitignore  .mcp.json  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  ROADMAP.md  TESTING.md
.github/workflows/: release.yml
docs/: system_instructions.md
docs/plans/: 2026-02-27-thunderbird-mcp-rust-design.md  2026-02-27-thunderbird-mcp-rust-impl.md
extension/: background.js  manifest.json
extension/mcp_server/: api.js  schema.json
scripts/: build.sh
src/: auth.rs  bridge.rs  main.rs  sanitize.rs  server.rs
src/tools/: compose.rs  contacts.rs  filters.rs  mail.rs  mod.rs
