[package]
name = "thunderbird-mcp"
version = "0.1.0"
edition = "2021"
description = "MCP server for Thunderbird — email, contacts, calendar, filters"
license = "MIT"

[[bin]]
name = "thunderbird-mcp"
path = "src/main.rs"

[dependencies]
rmcp       = { version = "0.1", features = ["server", "transport-io"] }
tokio      = { version = "1",   features = ["full"] }
reqwest    = { version = "0.12", features = ["json"] }
serde      = { version = "1",   features = ["derive"] }
serde_json = "1"
thiserror  = "2"
anyhow     = "1"
dirs       = "5"

[dev-dependencies]
mockito    = "1"
tempfile   = "3"
tokio-test = "0.4"
